Remove coffee cup and have LINKS in sidebar

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,10 +1,17 @@
 <header id="sidebar" class="side-shadow">
     <hgroup id="site-header">
-        <a id="site-title" href="{{ SITEURL }}"><h1><i class="icon-coffee"></i> {{ SITENAME }}</h1></a>
+        <a id="site-title" href="{{ SITEURL }}"><h1>{{ SITENAME }}</h1></a>
         <p id="site-desc">{% if SITESUBTITLE %} {{ SITESUBTITLE }} {% endif %}</p>
     </hgroup>
     <nav>
         <ul id="nav-links">
+            {% for name, url in LINKS %}
+            {% if url and url.find(':') > 0 %}
+                <li><a href="{{ url }}">{{ name }}</a></li>
+            {% else %}
+                <li><a href="{{ SITEURL }}/{{ url }}">{{ name }}</a></li>
+            {% endif %}
+            {% endfor %}
             {% if USE_CUSTOM_MENU %}
             {% for name, url in CUSTOM_MENUITEMS %}
                 <li><a href="{{ SITEURL }}/{{ url }}">{{ name }}</a></li>
