--- a/templates/article.html
+++ b/templates/article.html
@@ -33,6 +33,13 @@
                         <p>Tags: {% for tag in article.tags %}<a href="{{ SITEURL }}/{{ tag.url }}">{{ tag }}</a>, {% endfor %}</p>
                         {% endif %}
                     </aside>
+                    <h3>Related Posts</h3>
+                    <ul>
+                        {% for related in article.related_posts %}
+                            <li><a href="{{ related.url }}">{{ related.title }}</a></li>
+                        {% endfor %}
+                    </ul>
+
                     <hr/>
                     {% include "disqus.html" %}
                 </article>
