--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
             {% if article %}
                 <meta property="og:type" content="article" />
                 <meta property="og:title" content="{{ article.title|striptags }}" />
-                <meta property="og:url" content="{{ SITEURL }}/{{ article.url }}" />
+                <meta property="og:url" content="{{ CANONICALURL }}/{{ article.url }}" />
                 <meta property="og:description" content="{{ article.summary|striptags }}" />
                 {% if article.tags %}
                 {% for tag in article.tags %}
@@ -32,29 +32,29 @@
                 <meta name="twitter:title" content="{{ article.title|striptags }}">
                 <meta name="twitter:description" content="{{ article.summary|striptags }}">
                 {% if article.metadata.open_graph_image %}
-                    <meta property="og:image" content="{{ SITEURL }}/{{ article.metadata.open_graph_image }}"/>
-                    <meta name="twitter:image" content="{{ SITEURL }}/{{ article.metadata.open_graph_image }}">
+                    <meta property="og:image" content="{{ CANONICALURL }}/{{ article.metadata.open_graph_image }}"/>
+                    <meta name="twitter:image" content="{{ CANONICALURL }}/{{ article.metadata.open_graph_image }}">
                 {% endif %}
             {% elif page %}
                 <meta property="og:type" content="website" />
                 <meta property="og:title" content="{{ page.title|striptags }}" />
-                <meta property="og:url" content="{{ SITEURL }}/{{ page.url }}" />
+                <meta property="og:url" content="{{ CANONICALURL }}/{{ page.url }}" />
                 <meta property="og:description" content="{{ page.summary|striptags }}" />
                 <meta name="twitter:card" content="summary_large_image">
                 <meta name="twitter:title" content="{{ page.title|striptags }}">
                 <meta name="twitter:description" content="{{ page.summary|striptags }}">
                 {% if page.metadata.open_graph_image %}
-                    <meta property="og:image" content="{{ SITEURL }}/{{ page.metadata.open_graph_image }}"/>
-                    <meta name="twitter:image" content="{{ SITEURL }}/{{ page.metadata.open_graph_image }}">
+                    <meta property="og:image" content="{{ CANONICALURL }}/{{ page.metadata.open_graph_image }}"/>
+                    <meta name="twitter:image" content="{{ CANONICALURL }}/{{ page.metadata.open_graph_image }}">
                 {% endif %}
             {% else %}
                 <meta property="og:type" content="website" />
                 <meta property="og:title" content="{{ SITENAME }}" />
-                <meta property="og:url" content="{{ SITEURL }}" />
+                <meta property="og:url" content="{{ CANONICALURL }}" />
                 <meta property="og:description" content="{{ SITENAME }}" />
                 {% if OPEN_GRAPH_IMAGE %}
-                    <meta property="og:image" content="{{ SITEURL }}/{{ OPEN_GRAPH_IMAGE }}"/>
-                    <meta name="twitter:image" content="{{ SITEURL }}/{{ OPEN_GRAPH_IMAGE }}">
+                    <meta property="og:image" content="{{ CANONICALURL }}/{{ OPEN_GRAPH_IMAGE }}"/>
+                    <meta name="twitter:image" content="{{ CANONICALURL }}/{{ OPEN_GRAPH_IMAGE }}">
                 {% endif %}
             {% endif %}
         {% endif %}
@@ -65,6 +65,10 @@
         <link href='//fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="{{ SITEURL }}/theme/css/font-awesome.min.css">
         <link rel="stylesheet" href="{{ SITEURL }}/theme/css/main.css">
+        {% if CUSTOM_CSS %}
+            <link rel="stylesheet" href="{{ SITEURL }}/{{ CUSTOM_CSS }}">
+        {% endif %}
+
         {% endblock stylesheets %}
         {% if FEED_ALL_ATOM %}
         <link href="{{ FEED_DOMAIN }}/{{ FEED_ALL_ATOM }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} Atom Feed" />
